--- a/Innovzen/res/layout-land/animation_core.xml
+++ b/Innovzen/res/layout-land/animation_core.xml
@@ -58,6 +58,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="30dp"
+                android:layout_marginLeft="15dp"
                 android:src="@drawable/selector_icon_fullscreen_in" />
         </RelativeLayout>
     </RelativeLayout>
