--- a/Innovzen/res/layout-land/fragment_music.xml
+++ b/Innovzen/res/layout-land/fragment_music.xml
@@ -51,6 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_below="@id/left_mea_vertical_4"
         layout:orientation="true"
         layout:rate_down="5"
@@ -87,6 +88,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+        android:id="@+id/music1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_1"
@@ -97,6 +99,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+         android:id="@+id/music2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_2"
@@ -107,6 +110,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+         android:id="@+id/music3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_3"
@@ -117,6 +121,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+         android:id="@+id/music4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_4"
@@ -127,6 +132,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+         android:id="@+id/music5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_5"
