--- a/Innovzen/res/layout-land/fragment_animation_new.xml
+++ b/Innovzen/res/layout-land/fragment_animation_new.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:background="@color/main_backgroud" >
 
-    <!--
     <RelativeLayout
         android:id="@+id/animation_dummy_white_view_for_fullscreen"
         android:layout_width="match_parent"
@@ -14,7 +13,6 @@
         android:background="@android:color/white"
         android:visibility="gone" >
     </RelativeLayout>
-    -->
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/main_mea_vertical_1"
@@ -78,17 +76,22 @@
 
     <!-- 左边栏 -->
 
-    <include
+    <LinearLayout
+        android:id="@+id/left_include"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/main_mea_vertical_3"
         android:layout_alignLeft="@id/main_mea_horizontal_1"
         android:layout_alignRight="@id/main_mea_horizontal_1"
         android:layout_alignTop="@id/main_mea_vertical_1"
-        layout="@layout/reusable_lefter"
         android:background="#000000"
-        android:padding="@dimen/grid_half_gap" />
+        android:padding="@dimen/grid_half_gap" >
 
+        <include
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            layout="@layout/reusable_lefter" />
+    </LinearLayout>
     <!-- 中上框架 -->
 
     <LinearLayout
