--- a/Innovzen/res/layout-land/animation_core.xml
+++ b/Innovzen/res/layout-land/animation_core.xml
@@ -83,11 +83,13 @@
     <!-- PLAY BUTTON OVERLAY -->
 
     <RelativeLayout
+        android:visibility="invisible"
         android:id="@+id/animation_play_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#D2ffffff"
-        android:clickable="true" >
+        android:clickable="true" 
+        >
 
         <ImageView
             android:id="@+id/animation_play_overlay_btn"
