--- a/Innovzen/res/layout-land/fragment_mysession_mid.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_mid.xml
@@ -15,15 +15,11 @@
         android:background="#63A3BC"
         android:orientation="horizontal"
         android:weightSum="4" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Beginner"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF" />
+<ImageView 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    
+    />
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,15 +101,8 @@
         android:orientation="horizontal"
         android:weightSum="4" 
         >
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Max 30 sec"
-            android:textColor="#FF000000"
+        <ImageView 
             />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
