--- a/Innovzen/res/layout-land/reusable_lefter.xml
+++ b/Innovzen/res/layout-land/reusable_lefter.xml
@@ -90,13 +90,13 @@
         android:layout_alignTop="@id/left_mea_vertical_2"
         android:background="@drawable/btn_volum_open"
         android:orientation="vertical"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:weightSum="6" >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:background="@drawable/icon_volum" />
 
@@ -119,20 +119,22 @@
 
         <com.innovzen.fragments.VerticalSeekBar
             android:id="@+id/mySeekBar"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="4"
             android:paddingLeft="2dp"
-            
-           
+            android:background="@drawable/volume_level_down"
+            android:progressDrawable="@drawable/volume_level_up"
+           android:maxWidth="5dp"
+           android:minWidth="5dp"
             android:thumb="@drawable/volume_cursor" />
 
         <ImageView
             android:id="@+id/volum_less"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:background="@drawable/icon_volum_less" />
     </LinearLayout>
