--- a/Innovzen/res/layout-port/reusable_lefter.xml
+++ b/Innovzen/res/layout-port/reusable_lefter.xml
@@ -81,7 +81,7 @@
         android:background="@drawable/selector_btn_volume"
         android:padding="@dimen/grid_half_gap" />
 
-    <LinearLayout
+   <RelativeLayout
         android:id="@+id/voice_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -89,52 +89,37 @@
         android:layout_alignParentLeft="true"
         android:layout_alignTop="@id/left_mea_vertical_2"
         android:background="@drawable/btn_volum_open"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        android:weightSum="6" >
+        android:visibility="invisible">
 
         <ImageView
+            android:id="@+id/volumn_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/icon_volum" />
-
-        <!--
-        <ProgressBar
-            android:layout_weight="8"
-            android:id="@+id/myView_ProgressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:progress="30"
-            android:max="100"
-            
-            android:progressDrawable="@drawable/volume_level_up"
-            android:background="@drawable/volume_level_down"
-             >
-        </ProgressBar>
-        -->
-
-        <com.innovzen.fragments.VerticalSeekBar
-            android:id="@+id/mySeekBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="4"
-            android:paddingLeft="2dp"
-            
-           
-            android:thumb="@drawable/volume_cursor" />
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/icon_volum" 
+            android:layout_marginTop="20dip"/>
 
         <ImageView
             android:id="@+id/volum_less"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dip"
             android:background="@drawable/icon_volum_less" />
-    </LinearLayout>
+        
+        <com.innovzen.fragments.VerticalSeekBar
+            android:id="@+id/mySeekBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:thumb="@drawable/volume_cursor"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/volumn_max"
+            android:layout_above="@id/volum_less"
+            android:layout_marginTop="20dip"
+            android:layout_marginBottom="20dip" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
