--- a/Innovzen/res/layout-land/exercise_animation_gradient.xml
+++ b/Innovzen/res/layout-land/exercise_animation_gradient.xml
@@ -2,7 +2,8 @@
 <!-- gradient动画 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="#FFFF0000">
 
     <com.innovzen.animations.view.GradientView
         android:id="@+id/animation_gradient"
