--- a/Innovzen/res/layout-land/exercise_animation_gradient.xml
+++ b/Innovzen/res/layout-land/exercise_animation_gradient.xml
@@ -8,6 +8,7 @@
         android:id="@+id/animation_gradient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
 
     <RelativeLayout
