polish ui on phase one

--- a/Innovzen/res/layout-land/animation_core.xml
+++ b/Innovzen/res/layout-land/animation_core.xml
@@ -15,7 +15,7 @@
         android:background="@android:color/white" >
     </RelativeLayout>
 
-    <TextView
+<!--     <TextView
         android:id="@+id/animation_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +27,7 @@
         android:singleLine="true"
         android:text="Exercice PERFORMANCE"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/animation_type" />
+        android:textSize="@dimen/animation_type" /> -->
 
     <ImageView
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"
         android:src="@drawable/selector_icon_fullscreen_in" />
 
