--- a/Innovzen/res/layout-land/exercise_animation_petals.xml
+++ b/Innovzen/res/layout-land/exercise_animation_petals.xml
@@ -93,7 +93,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true" >
 
-            <include layout="@layout/reusable_circular_seekbar_small" />
+            <include layout="@layout/reusable_circular_seekbar_small"
+                android:visibility="invisible" />
         </RelativeLayout>
     </RelativeLayout>
 
