--- a/Innovzen/res/layout-land/fragment_user_setting.xml
+++ b/Innovzen/res/layout-land/fragment_user_setting.xml
@@ -165,6 +165,7 @@
         android:padding="@dimen/grid_half_gap" />
 
     <ImageView
+        android:id="@+id/set_pulse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_2"
