--- a/Innovzen/res/layout/bluetooth_device_list.xml
+++ b/Innovzen/res/layout/bluetooth_device_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!--
+     Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,54 +15,60 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <RelativeLayout         
+    android:orientation="vertical" >
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView 
+        android:layout_height="wrap_content" >
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_select_bluetooth"/>
-        
-        <ProgressBar 
+            android:layout_alignParentRight="true" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            style="?android:attr/progressBarStyleSmall"/>
-        
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/dialog_select_bluetooth" />
     </RelativeLayout>
-    <TextView android:id="@+id/title_paired_devices"
+
+    <TextView
+        android:id="@+id/title_paired_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#666"
+        android:paddingLeft="5dp"
         android:text="@string/title_paired_devices"
-        android:visibility="gone"
-        android:background="#666"
         android:textColor="#fff"
-        android:paddingLeft="5dp"
-    />
-    <ListView android:id="@+id/paired_devices"
+        android:visibility="gone" />
+
+    <ListView
+        android:id="@+id/paired_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stackFromBottom="true"
         android:layout_weight="1"
-    />
-    <TextView android:id="@+id/title_new_devices"
+        android:stackFromBottom="true" />
+
+    <TextView
+        android:id="@+id/title_new_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title_other_devices"
-        android:visibility="gone"
         android:background="#666"
-        android:textColor="#fff"
         android:paddingLeft="5dp"
-    />
+        android:text="@string/title_other_devices"
+        android:textColor="#fff"
+        android:visibility="gone" />
+    <!-- 
     <ListView android:id="@+id/new_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stackFromBottom="true"
         android:layout_weight="2"
     />
-
+ -->
 </LinearLayout>
