--- a/Innovzen/res/layout-land/fragment_mysession_bottom.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_bottom.xml
@@ -55,66 +55,105 @@
         layout:orientation="false"
         layout:rate_down="22"
         layout:rate_up="5" />
-	   <LinearLayout 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@id/top_horizontal_1"
-	        android:layout_alignParentTop="true"
-	        android:layout_alignRight="@id/top_horizontal_1"
-	        android:background="@drawable/banner_my_session_left" 
-	        android:padding="@dimen/grid_half_gap"
-	        android:gravity="center_horizontal"
-	    >
-	    <TextView 
-	        android:id="@+id/session_min"
-	        android:layout_marginTop="20dp"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	         android:text=""
-            android:textColor="#FF6D7172"
-            android:textSize="35sp"
-            android:textStyle="bold"
-	        />
-	</LinearLayout>
 
-     <ImageView
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@id/top_horizontal_1"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@id/top_horizontal_1"
+        android:background="@drawable/banner_my_session_left"
+        android:gravity="center_horizontal"
+        android:padding="@dimen/grid_half_gap" >
+
+        <TextView
+            android:id="@+id/session_min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:textColor="#FF6D7172"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/session_volume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/top_horizontal_2"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@id/top_horizontal_2"
-        android:background="@drawable/selector_btn_volume" 
-        android:padding="@dimen/grid_half_gap"
-        />
-      <ImageView
-          android:id="@+id/session_setting"
+        android:background="@drawable/selector_btn_volume"
+        android:padding="@dimen/grid_half_gap" />
+
+    <ImageView
+        android:id="@+id/session_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/top_horizontal_3"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@id/top_horizontal_3"
         android:background="@drawable/selector_btn_settings"
-        android:padding="@dimen/grid_half_gap"
-         />
-       <ImageView
+        android:padding="@dimen/grid_half_gap" />
+
+    <ImageView
         android:id="@+id/session_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/top_horizontal_4"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@id/top_horizontal_4"
-        android:background="@drawable/selector_btn_help" 
-        android:padding="@dimen/grid_half_gap"
-        />
-		 <ImageView
-		     android:id="@+id/session_zero"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_alignLeft="@id/top_horizontal_5"
-		        android:layout_alignParentTop="true"
-		        android:layout_alignRight="@id/top_horizontal_5"
-		        android:layout_alignBottom="@id/session_help"
-		        android:background="@drawable/selector_btn_gravity"
-		        android:padding="@dimen/grid_half_gap"
-		         />
+        android:background="@drawable/selector_btn_help"
+        android:padding="@dimen/grid_half_gap" />
+
+    <ImageView
+        android:id="@+id/session_zero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/session_help"
+        android:layout_alignLeft="@id/top_horizontal_5"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@id/top_horizontal_5"
+        android:background="@drawable/selector_btn_gravity"
+        android:padding="@dimen/grid_half_gap" />
+  <RelativeLayout
+        android:id="@+id/voice_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        
+        android:layout_alignBottom="@id/left_mea_vertical_3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@id/left_mea_vertical_2"
+        android:background="@drawable/btn_volum_open"
+        android:visibility="invisible">
+
+        <ImageView
+            android:id="@+id/volumn_max"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/icon_volum" 
+            android:layout_marginTop="30dip"/>
+
+        <ImageView
+            android:id="@+id/volum_less"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dip"
+            android:background="@drawable/icon_volum_less" />
+        
+        <com.innovzen.ui.VerticalSeekBar
+            android:id="@+id/mySeekBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:thumb="@drawable/volume_cursor"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/volumn_max"
+            android:layout_above="@id/volum_less"
+            android:progressDrawable="@drawable/seekbar_define_style"  />
+
+    </RelativeLayout>
 </RelativeLayout>
