--- a/Innovzen/res/layout-land/fragment_mysession_mid.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_mid.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         layout:orientation="true"
-        layout:rate_down="21"
+        layout:rate_down="42"
         layout:rate_up="1" />
 
     <com.innovzen.ui.MeasureView
@@ -23,8 +23,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/mid_left_vertical_1"
         layout:orientation="true"
-        layout:rate_down="21"
-        layout:rate_up="2" />
+        layout:rate_down="42"
+        layout:rate_up="3" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_left_vertical_3"
@@ -33,8 +33,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/mid_left_vertical_2"
         layout:orientation="true"
-        layout:rate_down="21"
-        layout:rate_up="3" />
+        layout:rate_down="42"
+        layout:rate_up="2" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_left_vertical_4"
@@ -43,8 +43,8 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/mid_left_vertical_3"
         layout:orientation="true"
-        layout:rate_down="21"
-        layout:rate_up="12" />
+        layout:rate_down="42"
+        layout:rate_up="14" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_left_vertical_5"
@@ -53,7 +53,17 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/mid_left_vertical_4"
         layout:orientation="true"
-        layout:rate_down="21"
+        layout:rate_down="42"
+        layout:rate_up="2" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/mid_left_vertical_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/mid_left_vertical_5"
+        layout:orientation="true"
+        layout:rate_down="42"
         layout:rate_up="3" />
 
     <com.innovzen.ui.MeasureView
@@ -147,6 +157,7 @@
         layout:rate_up="2" />
 
     <ImageView
+        android:id="@+id/beginner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
@@ -156,6 +167,7 @@
         android:background="@drawable/selector_icon_beginner" />
 
     <ImageView
+        android:id="@+id/intermadiate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
@@ -165,6 +177,7 @@
         android:background="@drawable/selector_icon_intermadiate" />
 
     <ImageView
+        android:id="@+id/pro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
@@ -174,6 +187,7 @@
         android:background="@drawable/selector_icon_pro" />
 
     <ImageView
+        android:id="@+id/customise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
@@ -181,7 +195,55 @@
         android:layout_alignRight="@id/mid_top_horizontal_8"
         android:layout_alignTop="@id/mid_left_vertical_2"
         android:background="@drawable/selector_icon_customise" />
-     <ImageView
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/mid_left_vertical_3"
+        android:layout_alignLeft="@id/mid_top_horizontal_2"
+        android:layout_alignRight="@id/mid_top_horizontal_8"
+        android:layout_alignTop="@id/mid_left_vertical_3"
+        android:gravity="center"
+        android:weightSum="4" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="MAX 30 sec"
+            android:textColor="#FF6D7172"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="MAX 30 sec"
+            android:textColor="#FF6D7172"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="MAX 30 sec"
+            android:textColor="#FF6D7172"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="MAX 30 sec"
+            android:textColor="#FF6D7172"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_4"
@@ -189,12 +251,97 @@
         android:layout_alignRight="@id/mid_top_horizontal_8"
         android:layout_alignTop="@id/mid_left_vertical_4"
         android:background="@drawable/time_beginner" />
-     <ImageView
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_5"
         android:layout_alignLeft="@id/mid_top_horizontal_2"
         android:layout_alignRight="@id/mid_top_horizontal_8"
         android:layout_alignTop="@id/mid_left_vertical_5"
-        android:background="@drawable/time_beginner" />
+        android:gravity="center"
+        android:weightSum="4" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Breathe in time"
+            android:textColor="#FF6D7172" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Hold time 3/4"
+            android:textColor="#FF6D7172" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Breathe out time"
+            android:textColor="#FF6D7172" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Hold time"
+            android:textColor="#FF6D7172" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_2"
+        android:layout_alignRight="@id/mid_top_horizontal_8"
+        android:layout_alignTop="@id/mid_left_vertical_6"
+        android:gravity="center"
+        android:weightSum="4" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="@string/full"
+            android:textColor="#35A9BB"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="@string/full"
+            android:textColor="#35A9BB" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="@string/empty"
+            android:textColor="#35A9BB"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="@string/empty"
+            android:textColor="#35A9BB" />
+    </LinearLayout>
+
 </RelativeLayout>
