--- a/Innovzen/res/layout-land/fragment_mysession_bottom.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_bottom.xml
@@ -17,7 +17,7 @@
         layout:rate_up="5" />
 
     <com.innovzen.ui.MeasureView
-        android:id="@+id/top_horizontal_2"
+        android:id="@+id/bottom_horizontal_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/top_horizontal_2"
+        android:layout_toRightOf="@id/bottom_horizontal_2"
         layout:orientation="false"
         layout:rate_down="22"
         layout:rate_up="4" />
@@ -55,6 +55,24 @@
         layout:orientation="false"
         layout:rate_down="22"
         layout:rate_up="5" />
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/bottom_v_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"       
+        layout:orientation="true"
+        layout:rate_down="2"
+        layout:rate_up="1" />
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/bottom_v_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/bottom_v_1"
+        android:layout_alignParentLeft="true"       
+        layout:orientation="true"
+        layout:rate_down="2"
+        layout:rate_up="1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -80,9 +98,9 @@
         android:id="@+id/session_volume"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/top_horizontal_2"
+        android:layout_alignLeft="@id/bottom_horizontal_2"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@id/top_horizontal_2"
+        android:layout_alignRight="@id/bottom_horizontal_2"
         android:background="@drawable/selector_btn_volume"
         android:padding="@dimen/grid_half_gap" />
 
@@ -120,12 +138,12 @@
         android:id="@+id/voice_progressbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
-        android:layout_alignBottom="@id/left_mea_vertical_3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignTop="@id/left_mea_vertical_2"
+        android:layout_alignTop="@id/bottom_v_2"
+        android:layout_alignBottom="@id/bottom_v_2"
+        android:layout_alignLeft="@id/bottom_horizontal_2"
+        android:layout_alignRight="@id/bottom_horizontal_2"
         android:background="@drawable/btn_volum_open"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/volumn_max"
