--- a/Innovzen/res/layout-land/fragment_user_setting.xml
+++ b/Innovzen/res/layout-land/fragment_user_setting.xml
@@ -219,8 +219,9 @@
         android:background="@drawable/selector_icon_heat"
         android:padding="@dimen/grid_half_gap" />
 
-    <ImageView
-        android:id="@+id/set_history"
+  
+    <LinearLayout 
+         android:id="@+id/set_breathe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/left_mea_vertical_3"
@@ -228,6 +229,22 @@
         android:layout_alignRight="@id/up_mea_Horizontal_5"
         android:layout_alignTop="@id/left_mea_vertical_3"
         android:background="@drawable/selector_btn_breathe"
-        android:padding="@dimen/grid_half_gap" />
+        android:padding="@dimen/grid_half_gap" 
+        android:orientation="horizontal"
+        android:weightSum="2"
+        >
+        <TextView 
+            android:id="@+id/set_breathe_add"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+        <TextView 
+            android:id="@+id/set_breathe_sub"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
