fix bugs on 12.3

--- a/Innovzen/res/layout-land/fragment_user_setting.xml
+++ b/Innovzen/res/layout-land/fragment_user_setting.xml
@@ -220,7 +220,7 @@
         android:padding="@dimen/grid_half_gap" />
 
   
-    <LinearLayout 
+    <ImageView 
          android:id="@+id/set_breathe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -230,21 +230,7 @@
         android:layout_alignTop="@id/left_mea_vertical_3"
         android:background="@drawable/selector_btn_breathe"
         android:padding="@dimen/grid_half_gap" 
-        android:orientation="horizontal"
-        android:weightSum="2"
         >
-        <TextView 
-            android:id="@+id/set_breathe_add"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            />
-        <TextView 
-            android:id="@+id/set_breathe_sub"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            />
-    </LinearLayout>
+    </ImageView>
 
 </RelativeLayout>
