--- a/Innovzen/res/layout-land/fragment_animation_new.xml
+++ b/Innovzen/res/layout-land/fragment_animation_new.xml
@@ -109,10 +109,10 @@
         <ImageView
             android:id="@+id/main_animation_stop"
             android:layout_width="0dip"
-            android:layout_height="180dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/selector_btn_home"
-            android:padding="20dp" >
+            android:padding="@dimen/grid_half_gap" >
         </ImageView>
 
         <ImageView
